[gd_scene load_steps=5 format=3 uid="uid://dnd32ryixilem"]

[ext_resource type="Script" path="res://HUD.gd" id="1_5sa0a"]
[ext_resource type="FontFile" uid="uid://dncor2eibjfmy" path="res://fonts/Xolonium-Regular.ttf" id="2_vrjum"]

[sub_resource type="InputEventAction" id="InputEventAction_0gw3q"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_ni1cm"]
events = [SubResource("InputEventAction_0gw3q")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_5sa0a")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_vrjum")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_vrjum")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_ni1cm")
text = "Start"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -120.0
offset_right = 248.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_vrjum")
theme_override_font_sizes/font_size = 64
text = "Dodge The Mandem!"
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.482
anchor_top = 0.644
anchor_right = 0.482
anchor_bottom = 0.644
offset_left = -47.36
offset_top = -15.6801
offset_right = 47.64
offset_bottom = 4.31995
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_vrjum")
theme_override_font_sizes/font_size = 36
text = "Highscore: "

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
